<resources>
    <string name="app_name">Portfolio</string>
    <string name="ButtonEntrar">Entrar</string>
    <string name="ButtonCadastrar">Cadastrar</string>
    <string name="ButtonVerificar">Verificar</string>
    <string name="text_CriaConta">Crie sua Conta</string>
    <string name="text_EsqueceuSenha_login">Esqueceu a Senha?</string>
    <string name="text_EsqueceuSenha">Preencha seu email para verificar sua conta!</string>
    <string name="textEfetuarLogin">Efetuar login</string>
    <string name="perfilPeso">Peso</string>
    <string name="perfilIdade">Idade</string>
    <string name="perfilAltura">Altura</string>
    <string name="perfilSexo">Sexo</string>
    <string name="interrogação">\?</string>
    <string name="supinoReto">Supino Retp</string>
    <string name="supinoInclinado">Supino Inclinado</string>
    <string name="PeckDeck">PeckDeck</string>
    <string name="Crossover">Crossover</string>
    <string name="supinoDeclinado">Supino Declinado</string>
    <string name="pulleyFrente">Pulley Frente</string>
    <string name="pulleyCostas">Pulley Costas</string>
    <string name="pulleyTriângulo">Pulley Triângulo</string>
    <string name="remadaUnilateral">Remada Unilateral</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>


    <!-- TODO: Remove or change this placeholder text -->