<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="117dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/perfilPeso"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        />

    <EditText
        android:id="@+id/peso"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:hint="@string/interrogação"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        style="@style/edit_text_perfil"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/perfilIdade"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        />

    <EditText
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:hint="@string/interrogação"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        style="@style/edit_text_perfil"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/perfilAltura"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        />

    <EditText
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:hint="@string/interrogação"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        style="@style/edit_text_perfil"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/perfilSexo"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        />

    <EditText
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:hint="@string/interrogação"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        style="@style/edit_text_perfil"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Salvar"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    </LinearLayout>
</FrameLayout>