<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
   xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        />

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_Text"
        android:hint="Email"
        android:textColorHint="@color/black"
        android:drawableRight="@drawable/ic_email"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_Text"
        android:hint="Senha"
        android:textColorHint="@color/black"
        android:drawableRight="@drawable/ic_eye"
        android:inputType="numberPassword"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ButtonEntrar"
        style="@style/Button"
        android:text="@string/ButtonEntrar"
        />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/CrieConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_CriaConta"
        android:layout_gravity="center"
        android:layout_marginTop="17dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/EsqueceuSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_EsqueceuSenha_login"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

</LinearLayout>
</androidx.core.widget.NestedScrollView>